# keyval-store

./: .gitignore  README.md
examples/multithread/: CMakeLists.txt  README.md  clientdata.c  clientdata.h  config.c  config.h  main.c
examples/tcpserver/: CMakeLists.txt  README.md  client_test.sh  config.c  config.h  main.c
src/common/: common.h  syscodes.h  syserrors.h
src/common/filemanager/: filemanager.c  filemanager.h
src/common/shell/: shell.c  shell.h
